--- a/codigo/styleTeste.css
+++ b/codigo/styleTeste.css
@@ -11,6 +11,17 @@
 
 body {
   font-family: "San Francisco";
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  max-width: 1000px;
+  margin: 0 auto;
+  gap: 48px;
+  font-size: 14px;
+}
+
+nav {
+  font-size: 13 px;
 }
 
 ul {
@@ -18,10 +29,32 @@ ul {
   list-style: none;
   display: flex;
   justify_content: space-between;
-  max-width: 1000px;
-  margin: 0 auto;
+  /* max-width: 1000px;
+  margin: 0 auto; */
   align-itens: center;
+}
+li {
+  cursor: pointer;
 }
 svg {
   display: block;
+}
+
+main {
+  /* max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px; */
+}
+
+#produto {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+}
+
+#precos {
+  font-size: 17.6px;
+}
+#a-vista,
+#parcelas {
+  font-size: 12.8px;
 }
